# ClaudeCodexRelayHub

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  desktop_config.rs  health.rs  lib.rs  logging.rs  main.rs  models.rs  pool.rs  provider_client.rs  state.rs
src-tauri/src/proxy/: claude.rs  codex.rs
src/components/: CopyButton.tsx  LogViewer.tsx  StatusBadge.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/pages/: CodexPool.tsx  Dashboard.tsx  Providers.tsx  Proxy.tsx  Readiness.tsx  Settings.tsx
