[package]
name = "claude-codex-relay-hub"
version = "0.1.0"
description = "Local Claude and Codex relay manager"
authors = ["ClaudeCodexRelayHub"]
edition = "2021"

[lib]
name = "claude_codex_relay_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
axum = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
